data/all_generated_tests/raw_wast_tests/br_table_StackCorruption_2109.wast
;; 9. **Backward Branch with Mismatched Operands:**    - Test backward branching using `br_table` within a `loop` structure where the input operands of the block do not match the stack state after the branch, highlighting potential stack corruption.

(assert_invalid
  (module
    (func (param i32 i32)
      (block (result i32)
        (loop (result i32)
          (br_table 0 1 (i32.const 1) (local.get 0) (local.get 0))
        )
      )
    )
  )
  "type mismatch"
)